# WikiDemo

./: .gitignore  Dockerfile  README.md  build_docker.sh  destroy.sh  docker-compose.dev.yml  docker-compose.env  docker-compose.prod.yml  docker-compose.yml  manage.py  pyproject.toml  setup.sh  start_api.sh  start_app.sh
templates/: base.html  index.html
wiki/: admin.py  forms.py  models.py  urls.py  views.py
wiki/migrations/: 0001_initial.py  0002_alter_wikipage_text_alter_wikipage_title.py  0003_wikipage_counter.py  0003_wikipage_links.py  0004_remove_wikipage_links_wikipage_links.py  0005_merge_20220129_1351.py
wiki/templates/: wiki_page_base.html  wiki_page_confirm_delete.html  wiki_page_detail.html  wiki_page_form.html  wiki_page_list.html
wiki/templates/wiki/: wiki_page_base.html  wiki_page_confirm_delete.html  wiki_page_detail.html  wiki_page_form.html  wiki_page_list.html
wiki_demo/: asgi.py  settings.py  urls.py  wsgi.py
