[tool.poetry]
name = "wikidemo"
version = "0.1.0"
description = "Wiki demo app created in Django"
authors = ["Philip Michaelsen"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0.1"
gunicorn = "^20.1.0"
psycopg2-binary = "^2.9.3"
python-dotenv = "^0.19.2"
django-extensions = "^3.1.5"
ipython = "^8.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
